// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wmlQuery select parse should parse a deeply nested sub-sequence 1`] = `
Array [
  Object {
    "items": Array [
      Object {
        "items": Array [
          Object {
            "items": Array [
              Object {
                "tag": "Asset",
                "type": "Tag",
              },
              Object {
                "tag": "Story",
                "type": "Tag",
              },
            ],
            "type": "Parallel",
          },
          Object {
            "tag": "Room",
            "type": "Tag",
          },
          Object {
            "type": "First",
          },
          Object {
            "tag": "Exit",
            "type": "Tag",
          },
        ],
        "type": "Serial",
      },
      Object {
        "items": Array [
          Object {
            "tag": "Asset",
            "type": "Tag",
          },
          Object {
            "items": Array [
              Object {
                "items": Array [
                  Object {
                    "tag": "Room",
                    "type": "Tag",
                  },
                  Object {
                    "tag": "Exit",
                    "type": "Tag",
                  },
                ],
                "type": "Serial",
              },
              Object {
                "items": Array [
                  Object {
                    "items": Array [
                      Object {
                        "tag": "Room",
                        "type": "Tag",
                      },
                      Object {
                        "tag": "Feature",
                        "type": "Tag",
                      },
                    ],
                    "type": "Parallel",
                  },
                  Object {
                    "tag": "Description",
                    "type": "Tag",
                  },
                ],
                "type": "Serial",
              },
            ],
            "type": "Parallel",
          },
        ],
        "type": "Serial",
      },
    ],
    "type": "Parallel",
  },
]
`;

exports[`wmlQuery select parse should parse a single sequence 1`] = `
Array [
  Object {
    "tag": "Asset",
    "type": "Tag",
  },
  Object {
    "tag": "Room",
    "type": "Tag",
  },
  Object {
    "type": "First",
  },
  Object {
    "tag": "Exit",
    "type": "Tag",
  },
]
`;

exports[`wmlQuery select parse should parse a singly nested sub-sequence 1`] = `
Array [
  Object {
    "items": Array [
      Object {
        "tag": "Asset",
        "type": "Tag",
      },
      Object {
        "tag": "Story",
        "type": "Tag",
      },
    ],
    "type": "Parallel",
  },
  Object {
    "tag": "Room",
    "type": "Tag",
  },
  Object {
    "type": "First",
  },
  Object {
    "tag": "Exit",
    "type": "Tag",
  },
]
`;
